# SRIP-2026

./: .gitignore  Research Architecture Specification.docx  literature_review.xlsx  project_context.md  pyproject.toml
artifacts/: README.md
datasets/: Healthcare Provider Fraud Detection Analysis.docx  NHIS Healthcare Claims and Fraud Dataset.docx  dataset_analysis.xlsx
docs/: artifact_audit.md  experiment_journal.md  experiment_registry.md  failure_log.md  figure_catalog.md  fusion_diagnosis.md  graph_schema.md  graphsage_diagnosis.md  paper_assets.md  project_status.md  publication_story.md  repository_freeze_report.md  reproducibility.md  research_decisions.md  research_findings.md  research_timeline.md  rgcn_diagnosis.md  threats_to_validity.md
figures/: README.md
paper/: 01_abstract.md  02_introduction.md  03_literature_review.md  04_methodology.md  05_experimental_setup.md  06_results.md  07_discussion.md  08_conclusion.md  09_appendix.md  README.md  full_manuscript.md
scripts/: 01_preprocess.py  02_create_splits.py  03_build_graphs.py  04_run_baselines.py  05_train_graphsage.py  06_evaluate_graphsage.py  07_train_rgcn.py  08_sync_research_docs.py  09_train_fusion.py  10_generate_publication_figures.py
tests/: conftest.py  test_build_graphs_integration.py  test_cleaner.py  test_constants.py  test_cross_validation.py  test_fusion.py  test_graph_builder.py  test_graph_constants.py  test_graph_features.py  test_graph_validator.py  test_graphsage.py  test_loader.py  test_merger.py  test_metrics.py  test_preprocess_integration.py  test_research_docs.py  (+4 more)
(+185 files in other folders)
