[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hgad-cms-fraud"
version = "0.1.0"
description = "Hybrid Explainable Heterogeneous Graph Anomaly Detection for CMS Provider Fraud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "scikit-learn>=1.3,<1.6",
    "networkx>=3.1",
]

[project.optional-dependencies]
models = [
    "catboost>=1.2",
]
gnn = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "torch-scatter",
    "torch-sparse",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
